query/y.output

state 0
	$accept: .top $end 

	'('  shift 10
	'!'  shift 4
	WORD  shift 8
	STR  shift 7
	RXP  shift 6
	.  error

	query  goto 2
	query1  goto 3
	query2  goto 5
	top  goto 1
	keyval  goto 9

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  query.    (1)

	.  reduce 1 (src line 33)


state 3
	query:  query1.    (2)
	query1:  query1.'&' query2 
	query1:  query1.'|' query2 

	'&'  shift 11
	'|'  shift 12
	.  reduce 2 (src line 39)


state 4
	query:  '!'.query 

	'('  shift 10
	'!'  shift 4
	WORD  shift 8
	STR  shift 7
	RXP  shift 6
	.  error

	query  goto 13
	query1  goto 3
	query2  goto 5
	keyval  goto 9

state 5
	query1:  query2.    (4)

	.  reduce 4 (src line 46)


state 6
	query2:  RXP.    (7)

	.  reduce 7 (src line 57)


state 7
	query2:  STR.    (8)

	.  reduce 8 (src line 61)


state 8
	query2:  WORD.    (9)
	keyval:  WORD.'=' STR 
	keyval:  WORD.'=' WORD 
	keyval:  WORD.'=' RXP 
	keyval:  WORD.'=' fix 
	keyval:  WORD.'=' flo 
	keyval:  WORD.NE STR 
	keyval:  WORD.NE WORD 
	keyval:  WORD.NE RXP 
	keyval:  WORD.NE fix 
	keyval:  WORD.NE flo 
	keyval:  WORD.'>' fix 
	keyval:  WORD.'>' flo 
	keyval:  WORD.'<' fix 
	keyval:  WORD.'<' flo 
	keyval:  WORD.GE fix 
	keyval:  WORD.GE flo 
	keyval:  WORD.LE fix 
	keyval:  WORD.LE flo 

	'='  shift 14
	'>'  shift 16
	'<'  shift 17
	LE  shift 19
	GE  shift 18
	NE  shift 15
	.  reduce 9 (src line 64)


state 9
	query2:  keyval.    (10)

	.  reduce 10 (src line 67)


state 10
	query2:  '('.query ')' 

	'('  shift 10
	'!'  shift 4
	WORD  shift 8
	STR  shift 7
	RXP  shift 6
	.  error

	query  goto 20
	query1  goto 3
	query2  goto 5
	keyval  goto 9

state 11
	query1:  query1 '&'.query2 

	'('  shift 10
	WORD  shift 8
	STR  shift 7
	RXP  shift 6
	.  error

	query2  goto 21
	keyval  goto 9

state 12
	query1:  query1 '|'.query2 

	'('  shift 10
	WORD  shift 8
	STR  shift 7
	RXP  shift 6
	.  error

	query2  goto 22
	keyval  goto 9

state 13
	query:  '!' query.    (3)

	.  reduce 3 (src line 41)


state 14
	keyval:  WORD '='.STR 
	keyval:  WORD '='.WORD 
	keyval:  WORD '='.RXP 
	keyval:  WORD '='.fix 
	keyval:  WORD '='.flo 

	'-'  shift 28
	FIX  shift 29
	FLO  shift 30
	WORD  shift 24
	STR  shift 23
	RXP  shift 25
	.  error

	fix  goto 26
	flo  goto 27

state 15
	keyval:  WORD NE.STR 
	keyval:  WORD NE.WORD 
	keyval:  WORD NE.RXP 
	keyval:  WORD NE.fix 
	keyval:  WORD NE.flo 

	'-'  shift 28
	FIX  shift 29
	FLO  shift 30
	WORD  shift 32
	STR  shift 31
	RXP  shift 33
	.  error

	fix  goto 34
	flo  goto 35

state 16
	keyval:  WORD '>'.fix 
	keyval:  WORD '>'.flo 

	'-'  shift 28
	FIX  shift 29
	FLO  shift 30
	.  error

	fix  goto 36
	flo  goto 37

state 17
	keyval:  WORD '<'.fix 
	keyval:  WORD '<'.flo 

	'-'  shift 28
	FIX  shift 29
	FLO  shift 30
	.  error

	fix  goto 38
	flo  goto 39

state 18
	keyval:  WORD GE.fix 
	keyval:  WORD GE.flo 

	'-'  shift 28
	FIX  shift 29
	FLO  shift 30
	.  error

	fix  goto 40
	flo  goto 41

state 19
	keyval:  WORD LE.fix 
	keyval:  WORD LE.flo 

	'-'  shift 28
	FIX  shift 29
	FLO  shift 30
	.  error

	fix  goto 42
	flo  goto 43

state 20
	query2:  '(' query.')' 

	')'  shift 44
	.  error


state 21
	query1:  query1 '&' query2.    (5)

	.  reduce 5 (src line 48)


state 22
	query1:  query1 '|' query2.    (6)

	.  reduce 6 (src line 52)


state 23
	keyval:  WORD '=' STR.    (12)

	.  reduce 12 (src line 75)


state 24
	keyval:  WORD '=' WORD.    (13)

	.  reduce 13 (src line 79)


state 25
	keyval:  WORD '=' RXP.    (14)

	.  reduce 14 (src line 82)


state 26
	keyval:  WORD '=' fix.    (15)

	.  reduce 15 (src line 85)


state 27
	keyval:  WORD '=' flo.    (16)

	.  reduce 16 (src line 88)


state 28
	fix:  '-'.FIX 
	flo:  '-'.FLO 

	FIX  shift 45
	FLO  shift 46
	.  error


state 29
	fix:  FIX.    (31)

	.  reduce 31 (src line 134)


state 30
	flo:  FLO.    (33)

	.  reduce 33 (src line 138)


state 31
	keyval:  WORD NE STR.    (17)

	.  reduce 17 (src line 91)


state 32
	keyval:  WORD NE WORD.    (18)

	.  reduce 18 (src line 94)


state 33
	keyval:  WORD NE RXP.    (19)

	.  reduce 19 (src line 97)


state 34
	keyval:  WORD NE fix.    (20)

	.  reduce 20 (src line 100)


state 35
	keyval:  WORD NE flo.    (21)

	.  reduce 21 (src line 103)


state 36
	keyval:  WORD '>' fix.    (22)

	.  reduce 22 (src line 106)


state 37
	keyval:  WORD '>' flo.    (23)

	.  reduce 23 (src line 109)


state 38
	keyval:  WORD '<' fix.    (24)

	.  reduce 24 (src line 112)


state 39
	keyval:  WORD '<' flo.    (25)

	.  reduce 25 (src line 115)


state 40
	keyval:  WORD GE fix.    (26)

	.  reduce 26 (src line 118)


state 41
	keyval:  WORD GE flo.    (27)

	.  reduce 27 (src line 121)


state 42
	keyval:  WORD LE fix.    (28)

	.  reduce 28 (src line 124)


state 43
	keyval:  WORD LE flo.    (29)

	.  reduce 29 (src line 127)


state 44
	query2:  '(' query ')'.    (11)

	.  reduce 11 (src line 70)


state 45
	fix:  '-' FIX.    (30)

	.  reduce 30 (src line 132)


state 46
	flo:  '-' FLO.    (32)

	.  reduce 32 (src line 136)


21 terminals, 8 nonterminals
34 grammar rules, 47/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 30/30000
44 extra closures
58 shift entries, 1 exceptions
21 goto entries
8 entries saved by goto default
Optimizer space used: output 67/30000
67 table entries, 11 zero
maximum spread: 21, maximum offset: 19
